--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.12",
+    "otplib": "^12.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
@@ -43,6 +45,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.27",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
