--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
-  postgress:
+  postgres:
     image: "postgres"
     container_name: postgresdb
     ports:
       - "5432:5432"
     volumes:
-      - postgressdb_data:/var/lib/postgresql
+      - postgresdb_data:/var/lib/postgresql
     environment:
       - POSTGRES_PASSWORD=password
     
@@ -16,10 +16,11 @@ services:
     ports:
       - 3333:3333
     environment:
-      POSTGRES_URL : "postgress://postgresdb:5432"
+      POSTGRES_URL : postgresql://postgres:password@postgres:5432
     volumes:
-      - mount-dev:/src
+      - .:/app
+      - /app/node_modules
 
 volumes:
-  postgressdb_data:
-  mount-dev:
+  postgresdb_data:
+  
