--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^5.28.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "input-otp": "^1.2.4",
     "next": "14.1.4",
     "prettier": "^3.2.5",
     "react": "^18",
