--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "input-otp": "^1.2.4",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.4",
     "prettier": "^3.2.5",
     "react": "^18",
