--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,12 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-query-devtools": "^5.28.10",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "prettier": "^3.2.5",
     "react": "^18",
